--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "react-prop-types": "^0.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-svg": "^2.2.15",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "request-promise": "^4.2.2"
   }
 }
