--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-grid-system": "^3.1.2",
+    "react-inlinesvg": "^0.8.1",
     "react-prop-types": "^0.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
@@ -42,6 +43,7 @@
     "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "yarn": "^0.27.5"
   }
 }
