--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-svg": "^2.2.15",
+    "react-websocket": "^2.0.0",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
+    "redux-menu": "^0.0.2",
     "redux-saga": "^0.16.0",
     "request-promise": "^4.2.2",
     "yarn": "^0.27.5"
