Updated the pywebview to start the bottle API. Its just easier then working with the JS<->Python bridge code and easier to debug if running outside of pywebview.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ logs/*
 viewer/static/app.bundle.js
 viewer/static/index.html
 viewer/static/main.css
+rmfriendui/static/app.bundle.js
+rmfriendui/static/index.html
+rmfriendui/static/main.css
